--- a/src/root.css
+++ b/src/root.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+table, th, td {
+	border: 1px solid;
+	border-collapse: collapse;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+}
+
+table {
+    margin-top:1rem;
+    margin-bottom:1rem;
+}
